--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "format": "prettier --write .",
     "lint": "eslint 'src/**/*.{[jt]s,[jt]sx}'",
     "inline-inherit-doc": "ts-node-script config/inlineInheritDoc.ts",
-    "test": "node --expose-gc ./node_modules/jest/bin/jest.js --config ./config/jest.config.js",
+    "test": "node --expose-gc ./node_modules/jest/bin/jest.js --config ./config/jest.config.js --testRegex 'useQuery.test.tsx'",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --config ./config/jest.config.js --runInBand --testTimeout 99999 --logHeapUsage",
     "test:ci": "TEST_ENV=ci npm run test:coverage -- --logHeapUsage && npm run test:memory",
     "test:watch": "jest --config ./config/jest.config.js --watch",
